; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/arc/gnu/extr_arcompact-dis.c_mwerror.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/arc/gnu/extr_arcompact-dis.c_mwerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arcDisState = type { i32, i32 (i32, i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.arcDisState*, i8*)* @mwerror to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mwerror(%struct.arcDisState* %0, i8* %1) #0 {
  %3 = alloca %struct.arcDisState*, align 8
  %4 = alloca i8*, align 8
  store %struct.arcDisState* %0, %struct.arcDisState** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.arcDisState*, %struct.arcDisState** %3, align 8
  %6 = getelementptr inbounds %struct.arcDisState, %struct.arcDisState* %5, i32 0, i32 1
  %7 = load i32 (i32, i8*)*, i32 (i32, i8*)** %6, align 8
  %8 = icmp ne i32 (i32, i8*)* %7, null
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load %struct.arcDisState*, %struct.arcDisState** %3, align 8
  %11 = getelementptr inbounds %struct.arcDisState, %struct.arcDisState* %10, i32 0, i32 1
  %12 = load i32 (i32, i8*)*, i32 (i32, i8*)** %11, align 8
  %13 = load %struct.arcDisState*, %struct.arcDisState** %3, align 8
  %14 = getelementptr inbounds %struct.arcDisState, %struct.arcDisState* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 %12(i32 %15, i8* %16)
  br label %18

18:                                               ; preds = %9, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
